--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -4,12 +4,12 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-3xl font-extrabold text-center text-gray-900 mb-8">Our Trusted Partners</h2>
         <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6 items-center">
-            <img src="/brands/brand1.png" alt="Brand 1" class="mx-auto h-12 object-contain">
-            <img src="/brands/brand2.png" alt="Brand 2" class="mx-auto h-12 object-contain">
-            <img src="/brands/brand3.png" alt="Brand 3" class="mx-auto h-12 object-contain">
-            <img src="/brands/brand4.png" alt="Brand 4" class="mx-auto h-12 object-contain">
-            <img src="/brands/brand5.png" alt="Brand 5" class="mx-auto h-12 object-contain">
-            <img src="/brands/brand6.png" alt="Brand 6" class="mx-auto h-12 object-contain">
+            <img src="/brands/Amadeus.svg" alt="Brand 1" class="mx-auto h-12 object-contain">
+            <img src="/brands/Apple.svg" alt="Brand 2" class="mx-auto h-12 object-contain">
+            <img src="/brands/BBVA.svg" alt="Brand 3" class="mx-auto h-12 object-contain">
+            <img src="/brands/Graphext.svg" alt="Brand 4" class="mx-auto h-12 object-contain">
+            <img src="/brands/Indra.svg" alt="Brand 5" class="mx-auto h-12 object-contain">
+            <img src="/brands/Microsoft.svg" alt="Brand 6" class="mx-auto h-12 object-contain">
         </div>
     </div>
 </div>
